--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,3 +56,24 @@ jobs:
       - run: bin/phpunit
 #      - run: ./vendor/bin/codecept build
 #      - run: ./vendor/bin/codecept run
+  deploy:
+    docker:
+      - image: buildpack-deps:trusty
+    steps:
+      - checkout
+      - run:
+          name: Heroku への master のデプロイ
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
